--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
-body {
-    width: 100vw;
-}
-
 #logo {
     position: absolute;
     left: 30%;
 }
-
 
 h1, h2, h3 {
   font-family: Bangla MN;
@@ -19,18 +14,9 @@ h1, h2, h3{
   margin-bottom: 0.3em;
 }
 
-#welcome{
-    position: absolute;
-    top: 70%;
-    left: 5%;
-    font-size: 30px;
-    color: darkgreen;
-   text-align: center;
-}
-
 ul, ol{
   margin-top: 0;
-  padding-left: 1em;
+  padding-left: 1em
 }
 
 li span {
@@ -46,12 +32,22 @@ li span {
     z-index: 5;
 }
 
+#navbar {
+    position: relative;
+    border: 0;
+    width: 90%;
+    height:5vh;
+    background-color: lightyellow;
+    text-align: center;
+}
+
 
 #navbar ul {
+    position: relative;
     padding: 0;
     margin: 0;
     list-style-type: none;
-    
+    left: 20%;    
 }
 
 #navbar ul li {
@@ -66,6 +62,9 @@ li span {
   width: 100%;
   background-size: cover;
   background-position: center center;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 #hero h1{
